# TypicalityOfContextuality

./: LICENSE  README.md  TypicalityOfContextuality.py  pyproject.toml
typicality_of_contextuality/: __init__.py  core.py  math_tools.py  preprocessing.py  simplexEmbedding.py
