[project]
name = "typicality-of-contextuality"
version = "2.0"
description = "Typicality of contextuality certification in prepare-and-measure scenarios"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Vinicius P. Rossi" }
]

license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "cvxpy",
    "qutip",
    "tqdm",
    "pycddlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["typicality_of_contextuality"]
